style.css
.fade-carousel {
    position: relative;
    height: 100vh;
}
.fade-carousel .carousel-inner .item {
    height: 100vh;
}
.fade-carousel .carousel-indicators > li {
    margin: 0 2px;
    background-color: #f39c12;
    border-color: #f39c12;
    opacity: .7;
}
.fade-carousel .carousel-indicators > li.active {
  width: 10px;
  height: 10px;
  opacity: 1;
}


.hero {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 3;
    color: #fff;
    text-align: center;
    text-transform: lowercase;
    text-shadow: 1px 1px 0 rgba(0,0,0,.75);
      -webkit-transform: translate3d(-50%,-50%,0);
         -moz-transform: translate3d(-50%,-50%,0);
          -ms-transform: translate3d(-50%,-50%,0);
           -o-transform: translate3d(-50%,-50%,0);
              transform: translate3d(-50%,-50%,0);
}
.hero h1 {
    font-size: 105px;    
    font-weight: bold;
    margin: 0;
    padding: 0;
	font-family: 'Just Another Hand', cursive;
	color: #FEDC3D;
}

.fade-carousel .carousel-inner .item .hero {
    opacity: 0;
    -webkit-transition: 2s all ease-in-out .1s;
       -moz-transition: 2s all ease-in-out .1s; 
        -ms-transition: 2s all ease-in-out .1s; 
         -o-transition: 2s all ease-in-out .1s; 
            transition: 2s all ease-in-out .1s; 
}
.fade-carousel .carousel-inner .item.active .hero {
    opacity: 1;
    -webkit-transition: 2s all ease-in-out .1s;
       -moz-transition: 2s all ease-in-out .1s; 
        -ms-transition: 2s all ease-in-out .1s; 
         -o-transition: 2s all ease-in-out .1s; 
            transition: 2s all ease-in-out .1s;    
}

/*OVERLAY*/

.overlay {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 2;
    background-color: #080d15;
    opacity: .3;
}


/*BUTTONS*/

.btn.btn-lg {padding: 10px 40px;}
.btn.btn-hero,
.btn.btn-hero:hover,
.btn.btn-hero:focus {
    color: #f5f5f5;
    background-color: #01ABAA;
    border-color: #1abc9c;
    outline: none;
    margin: 20px auto;
	text-transform: lowercase;
	font-family: 'Roboto', sans-serif !important;
}

/*PICTURE SLIDES*/

.fade-carousel .slides .slide-1, 
.fade-carousel .slides .slide-2,
.fade-carousel .slides .slide-3,
.fade-carousel .slides .slide-4,
.fade-carousel .slides .slide-5 {
  height: 100vh;
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
}
.fade-carousel .slides .slide-1 {
  background-image: url(img/friends3.jpg); 
}
.fade-carousel .slides .slide-2 {
  background-image: url(img/friends2.jpg);
}
.fade-carousel .slides .slide-3 {
  background-image: url(img/friends1.jpg);
}
.fade-carousel .slides .slide-4 {
  background-image: url(img/friends4.jpg);
}
.fade-carousel .slides .slide-5 {
  background-image: url(img/friends5.jpg);
}

/********************************/
/*          Media Queries       */
/********************************/
@media screen and (min-width: 980px){
    .hero { width: 980px; }    
}
@media screen and (max-width: 640px){
    .hero h1 { font-size: 4em; }    
}


.glimpseAbout {
	text-transform: lowercase;
	font-family: 'Roboto', sans-serif;
}

.aboutP {
	text-transform: lowercase;
	font-family: 'Roboto', sans-serif;
}

#about {
	background-color: #FEA680;
	padding: 12px
}


.testimonialsH1 {
	text-transform: lowercase;
	font-family: 'Roboto', sans-serif;
	color: #FEDC3D;
}

#testimonials {
	background-color: #01ABAA;
	padding: 12px;
}

#callToAction {
	background: transparent url("img/blurryCity.jpg") no-repeat top center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: 100%;
    height: 300px;
}

.awesome {
	color: white;
	font-family: 'Roboto', sans-serif;
}

h3 {
	color: white;
	font-family: 'Roboto', sans-serif;
}

.fa-5x {
	color: white;
}

.col-lg-4 {
	align-content: center !important;
}

